:zap: fixed spacing to tags

--- a/uikit/styles/modules/_tag.css
+++ b/uikit/styles/modules/_tag.css
@@ -13,6 +13,11 @@
   cursor: pointer;
 }
 
+.tag:not(:last-child) {
+  margin-right: 0.25rem;
+  margin-bottom: 0.75rem;
+}
+
 .tag > small {
   color: var(--color-white);
 }
